intial EDA stuff

--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "a65cf8f7-f55f-4f79-aaa3-78c9ea63999f",
    "metadata": {},
    "outputs": [],
@@ -13,8 +13,332 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "778525e7-3707-416d-a4dd-f3bae14247cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "store=pd.read_csv(\"data/store.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f6db4e91-b252-4619-b9d4-e3693e1cc933",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train=pd.read_csv(\"data/train.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "aa67dc02-77a3-42e5-9d26-966b950de99b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Store</th>\n",
+       "      <th>CompetitionDistance</th>\n",
+       "      <th>CompetitionOpenSinceMonth</th>\n",
+       "      <th>CompetitionOpenSinceYear</th>\n",
+       "      <th>Promo2</th>\n",
+       "      <th>Promo2SinceWeek</th>\n",
+       "      <th>Promo2SinceYear</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1115.00000</td>\n",
+       "      <td>1112.000000</td>\n",
+       "      <td>761.000000</td>\n",
+       "      <td>761.000000</td>\n",
+       "      <td>1115.000000</td>\n",
+       "      <td>571.000000</td>\n",
+       "      <td>571.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>558.00000</td>\n",
+       "      <td>5404.901079</td>\n",
+       "      <td>7.224704</td>\n",
+       "      <td>2008.668857</td>\n",
+       "      <td>0.512108</td>\n",
+       "      <td>23.595447</td>\n",
+       "      <td>2011.763573</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>322.01708</td>\n",
+       "      <td>7663.174720</td>\n",
+       "      <td>3.212348</td>\n",
+       "      <td>6.195983</td>\n",
+       "      <td>0.500078</td>\n",
+       "      <td>14.141984</td>\n",
+       "      <td>1.674935</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1900.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2009.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>279.50000</td>\n",
+       "      <td>717.500000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>2006.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>13.000000</td>\n",
+       "      <td>2011.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>558.00000</td>\n",
+       "      <td>2325.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>2010.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>22.000000</td>\n",
+       "      <td>2012.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>836.50000</td>\n",
+       "      <td>6882.500000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>2013.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>37.000000</td>\n",
+       "      <td>2013.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1115.00000</td>\n",
+       "      <td>75860.000000</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>2015.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>2015.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Store  CompetitionDistance  CompetitionOpenSinceMonth  \\\n",
+       "count  1115.00000          1112.000000                 761.000000   \n",
+       "mean    558.00000          5404.901079                   7.224704   \n",
+       "std     322.01708          7663.174720                   3.212348   \n",
+       "min       1.00000            20.000000                   1.000000   \n",
+       "25%     279.50000           717.500000                   4.000000   \n",
+       "50%     558.00000          2325.000000                   8.000000   \n",
+       "75%     836.50000          6882.500000                  10.000000   \n",
+       "max    1115.00000         75860.000000                  12.000000   \n",
+       "\n",
+       "       CompetitionOpenSinceYear       Promo2  Promo2SinceWeek  Promo2SinceYear  \n",
+       "count                761.000000  1115.000000       571.000000       571.000000  \n",
+       "mean                2008.668857     0.512108        23.595447      2011.763573  \n",
+       "std                    6.195983     0.500078        14.141984         1.674935  \n",
+       "min                 1900.000000     0.000000         1.000000      2009.000000  \n",
+       "25%                 2006.000000     0.000000        13.000000      2011.000000  \n",
+       "50%                 2010.000000     1.000000        22.000000      2012.000000  \n",
+       "75%                 2013.000000     1.000000        37.000000      2013.000000  \n",
+       "max                 2015.000000     1.000000        50.000000      2015.000000  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "store.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ae92c8ad-e7d4-41c2-805e-b0aa873469eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Store</th>\n",
+       "      <th>DayOfWeek</th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>Customers</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Promo</th>\n",
+       "      <th>SchoolHoliday</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>618473.000000</td>\n",
+       "      <td>618757.000000</td>\n",
+       "      <td>618747.000000</td>\n",
+       "      <td>618683.000000</td>\n",
+       "      <td>618588.000000</td>\n",
+       "      <td>618580.000000</td>\n",
+       "      <td>618437.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>558.105623</td>\n",
+       "      <td>3.994914</td>\n",
+       "      <td>5668.015834</td>\n",
+       "      <td>628.909831</td>\n",
+       "      <td>0.829167</td>\n",
+       "      <td>0.370447</td>\n",
+       "      <td>0.173253</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>321.885545</td>\n",
+       "      <td>1.997485</td>\n",
+       "      <td>3809.655137</td>\n",
+       "      <td>463.786905</td>\n",
+       "      <td>0.376363</td>\n",
+       "      <td>0.482925</td>\n",
+       "      <td>0.378466</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>279.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>3640.000000</td>\n",
+       "      <td>397.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>558.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>5625.000000</td>\n",
+       "      <td>604.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>837.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>7714.000000</td>\n",
+       "      <td>833.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1115.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>38037.000000</td>\n",
+       "      <td>7388.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Store      DayOfWeek          Sales      Customers  \\\n",
+       "count  618473.000000  618757.000000  618747.000000  618683.000000   \n",
+       "mean      558.105623       3.994914    5668.015834     628.909831   \n",
+       "std       321.885545       1.997485    3809.655137     463.786905   \n",
+       "min         1.000000       1.000000       0.000000       0.000000   \n",
+       "25%       279.000000       2.000000    3640.000000     397.000000   \n",
+       "50%       558.000000       4.000000    5625.000000     604.000000   \n",
+       "75%       837.000000       6.000000    7714.000000     833.000000   \n",
+       "max      1115.000000       7.000000   38037.000000    7388.000000   \n",
+       "\n",
+       "                Open          Promo  SchoolHoliday  \n",
+       "count  618588.000000  618580.000000  618437.000000  \n",
+       "mean        0.829167       0.370447       0.173253  \n",
+       "std         0.376363       0.482925       0.378466  \n",
+       "min         0.000000       0.000000       0.000000  \n",
+       "25%         1.000000       0.000000       0.000000  \n",
+       "50%         1.000000       0.000000       0.000000  \n",
+       "75%         1.000000       1.000000       0.000000  \n",
+       "max         1.000000       1.000000       1.000000  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed07e375-e14f-4d5a-ae55-57c02790c814",
    "metadata": {},
    "outputs": [],
    "source": []
