--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -337,8 +337,337 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "ed07e375-e14f-4d5a-ae55-57c02790c814",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Store</th>\n",
+       "      <th>StoreType</th>\n",
+       "      <th>Assortment</th>\n",
+       "      <th>CompetitionDistance</th>\n",
+       "      <th>CompetitionOpenSinceMonth</th>\n",
+       "      <th>CompetitionOpenSinceYear</th>\n",
+       "      <th>Promo2</th>\n",
+       "      <th>Promo2SinceWeek</th>\n",
+       "      <th>Promo2SinceYear</th>\n",
+       "      <th>PromoInterval</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>c</td>\n",
+       "      <td>a</td>\n",
+       "      <td>1270.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2008.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>a</td>\n",
+       "      <td>a</td>\n",
+       "      <td>570.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>2007.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>Jan,Apr,Jul,Oct</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>a</td>\n",
+       "      <td>a</td>\n",
+       "      <td>14130.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>2006.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>2011.0</td>\n",
+       "      <td>Jan,Apr,Jul,Oct</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>c</td>\n",
+       "      <td>c</td>\n",
+       "      <td>620.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2009.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>a</td>\n",
+       "      <td>a</td>\n",
+       "      <td>29910.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2015.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Store StoreType Assortment  CompetitionDistance  CompetitionOpenSinceMonth  \\\n",
+       "0      1         c          a               1270.0                        9.0   \n",
+       "1      2         a          a                570.0                       11.0   \n",
+       "2      3         a          a              14130.0                       12.0   \n",
+       "3      4         c          c                620.0                        9.0   \n",
+       "4      5         a          a              29910.0                        4.0   \n",
+       "\n",
+       "   CompetitionOpenSinceYear  Promo2  Promo2SinceWeek  Promo2SinceYear  \\\n",
+       "0                    2008.0       0              NaN              NaN   \n",
+       "1                    2007.0       1             13.0           2010.0   \n",
+       "2                    2006.0       1             14.0           2011.0   \n",
+       "3                    2009.0       0              NaN              NaN   \n",
+       "4                    2015.0       0              NaN              NaN   \n",
+       "\n",
+       "     PromoInterval  \n",
+       "0              NaN  \n",
+       "1  Jan,Apr,Jul,Oct  \n",
+       "2  Jan,Apr,Jul,Oct  \n",
+       "3              NaN  \n",
+       "4              NaN  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "store.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a43981ef-72cb-4a6b-87c0-950e7cd3955c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Store</th>\n",
+       "      <th>DayOfWeek</th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>Customers</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Promo</th>\n",
+       "      <th>StateHoliday</th>\n",
+       "      <th>SchoolHoliday</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>1115.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>a</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>379.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>a</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>378.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>a</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>377.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>a</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>376.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>a</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date   Store  DayOfWeek  Sales  Customers  Open  Promo StateHoliday  \\\n",
+       "0  2013-01-01  1115.0        2.0    0.0        0.0   0.0    0.0            a   \n",
+       "1  2013-01-01   379.0        2.0    0.0        0.0   0.0    0.0            a   \n",
+       "2  2013-01-01   378.0        2.0    0.0        0.0   0.0    0.0            a   \n",
+       "3  2013-01-01   377.0        2.0    0.0        0.0   0.0    0.0            a   \n",
+       "4  2013-01-01   376.0        2.0    0.0        0.0   0.0    0.0            a   \n",
+       "\n",
+       "   SchoolHoliday  \n",
+       "0            1.0  \n",
+       "1            1.0  \n",
+       "2            1.0  \n",
+       "3            1.0  \n",
+       "4            1.0  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "e4b6adfd-24f7-4709-9fd8-874353fffbfd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method DataFrame.value_counts of       Store StoreType Assortment  CompetitionDistance  \\\n",
+       "0         1         c          a               1270.0   \n",
+       "1         2         a          a                570.0   \n",
+       "2         3         a          a              14130.0   \n",
+       "3         4         c          c                620.0   \n",
+       "4         5         a          a              29910.0   \n",
+       "...     ...       ...        ...                  ...   \n",
+       "1110   1111         a          a               1900.0   \n",
+       "1111   1112         c          c               1880.0   \n",
+       "1112   1113         a          c               9260.0   \n",
+       "1113   1114         a          c                870.0   \n",
+       "1114   1115         d          c               5350.0   \n",
+       "\n",
+       "      CompetitionOpenSinceMonth  CompetitionOpenSinceYear  Promo2  \\\n",
+       "0                           9.0                    2008.0       0   \n",
+       "1                          11.0                    2007.0       1   \n",
+       "2                          12.0                    2006.0       1   \n",
+       "3                           9.0                    2009.0       0   \n",
+       "4                           4.0                    2015.0       0   \n",
+       "...                         ...                       ...     ...   \n",
+       "1110                        6.0                    2014.0       1   \n",
+       "1111                        4.0                    2006.0       0   \n",
+       "1112                        NaN                       NaN       0   \n",
+       "1113                        NaN                       NaN       0   \n",
+       "1114                        NaN                       NaN       1   \n",
+       "\n",
+       "      Promo2SinceWeek  Promo2SinceYear     PromoInterval  \n",
+       "0                 NaN              NaN               NaN  \n",
+       "1                13.0           2010.0   Jan,Apr,Jul,Oct  \n",
+       "2                14.0           2011.0   Jan,Apr,Jul,Oct  \n",
+       "3                 NaN              NaN               NaN  \n",
+       "4                 NaN              NaN               NaN  \n",
+       "...               ...              ...               ...  \n",
+       "1110             31.0           2013.0   Jan,Apr,Jul,Oct  \n",
+       "1111              NaN              NaN               NaN  \n",
+       "1112              NaN              NaN               NaN  \n",
+       "1113              NaN              NaN               NaN  \n",
+       "1114             22.0           2012.0  Mar,Jun,Sept,Dec  \n",
+       "\n",
+       "[1115 rows x 10 columns]>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "store.value_counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3687e659-9594-4a28-9346-2d5d535993af",
    "metadata": {},
    "outputs": [],
    "source": []
