add model notebooks

--- a/notebooks/feature_building.ipynb
+++ b/notebooks/feature_building.ipynb
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
      "output_type": "stream",
      "text": [
       "(497376,)\n",
-      "(497376, 20)\n"
+      "(497376, 21)\n"
      ]
     }
    ],
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -434,9 +434,9 @@
      "output_type": "stream",
      "text": [
       "(397900,)\n",
-      "(397900, 20)\n",
+      "(397900, 21)\n",
       "(99476,)\n",
-      "(99476, 20)\n"
+      "(99476, 21)\n"
      ]
     }
    ],
@@ -458,7 +458,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
