hard code mode from train data for test set

--- a/notebooks/feature_building.ipynb
+++ b/notebooks/feature_building.ipynb
@@ -341,9 +341,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
    "source": [
     "# fill missing \"open\" data with 0 if sales is 0 else with mode\n",
     "mask = (df[\"Sales\"] == 0) & (df[\"Open\"].isna())\n",
@@ -351,29 +359,48 @@
     "\n",
     "# fill remaining missing \"open\" data with mode\n",
     "mode = df[\"Open\"].mode()[0]\n",
-    "df[\"Open\"].fillna(value=mode, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# fill missing \"promo\" data with mode\n",
-    "mode = df[\"Promo\"].mode()[0]\n",
-    "df[\"Promo\"].fillna(value=mode, inplace=True)"
+    "df[\"Open\"].fillna(value=mode, inplace=True)\n",
+    "print(mode)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# fill missing \"promo\" data with mode\n",
+    "mode = df[\"Promo\"].mode()[0]\n",
+    "df[\"Promo\"].fillna(value=mode, inplace=True)\n",
+    "print(mode)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
+     ]
+    }
+   ],
    "source": [
     "# fill missing \"SchoolHoliday\" data with mode\n",
     "mode = df[\"SchoolHoliday\"].mode()[0]\n",
-    "df[\"SchoolHoliday\"].fillna(value=mode, inplace=True)"
+    "df[\"SchoolHoliday\"].fillna(value=mode, inplace=True)\n",
+    "print(mode)"
    ]
   },
   {
