--- a/notebooks/feature_building.ipynb
+++ b/notebooks/feature_building.ipynb
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -484,40 +484,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-11-4d6dd85c6fbf>:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  X_train['StoreType_enc'] = X_train['StoreType'].map(storetype_dict).fillna(X_train[\"Sales\"].mean())\n",
-      "<ipython-input-11-4d6dd85c6fbf>:5: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  X_test['StoreType_enc'] = X_test['StoreType'].map(storetype_dict).fillna(X_train[\"Sales\"].mean())\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Get mean of target variable for StoreType - mean encoding\n",
-    "storetype_dict = X_train.groupby(\"StoreType\").mean().loc[:, \"Sales\"].to_dict()\n",
-    "#storetype_dict\n",
-    "X_train['StoreType_enc'] = X_train['StoreType'].map(storetype_dict).fillna(X_train[\"Sales\"].mean())\n",
-    "X_test['StoreType_enc'] = X_test['StoreType'].map(storetype_dict).fillna(X_train[\"Sales\"].mean())  "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "metadata": {
     "scrolled": true
@@ -527,57 +493,46 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-12-a6e67fa28ed8>:3: SettingWithCopyWarning: \n",
+      "/opt/anaconda3/envs/dsr-minicomp/lib/python3.9/site-packages/pandas/core/indexing.py:1667: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  X_train['Assortment_enc'] = X_train.loc[:,'Assortment'].map(assortment_dict).fillna(X_train[\"Sales\"].mean())\n",
-      "<ipython-input-12-a6e67fa28ed8>:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  X_test['Assortment_enc'] = X_test.loc[:,'Assortment'].map(assortment_dict).fillna(X_train[\"Sales\"].mean())\n"
+      "  self.obj[key] = value\n"
      ]
     }
    ],
    "source": [
-    "# Get mean of target variable for Assortment - mean encoding\n",
-    "assortment_dict = X_train.groupby(\"Assortment\").mean().loc[:, \"Sales\"].to_dict()\n",
-    "X_train['Assortment_enc'] = X_train.loc[:,'Assortment'].map(assortment_dict).fillna(X_train[\"Sales\"].mean())\n",
-    "X_test['Assortment_enc'] = X_test.loc[:,'Assortment'].map(assortment_dict).fillna(X_train[\"Sales\"].mean()) "
+    "# Get mean of target variable for StoreType - mean encoding\n",
+    "storetype_dict = X_train.groupby([\"StoreType\"]).mean().loc[:, \"Sales\"].to_dict()\n",
+    "X_train.loc[:, 'StoreType_enc'] = X_train.loc[:,'StoreType'].map(storetype_dict).fillna(X_train.loc[:,\"Sales\"].mean())\n",
+    "X_test.loc[:, 'StoreType_enc'] = X_test.loc[:,'StoreType'].map(storetype_dict).fillna(X_train.loc[:,\"Sales\"].mean()) "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-13-aaced9650596>:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  X_train['Store_enc'] = X_train.loc[:,'Store'].map(storeid_dict).fillna(X_train[\"Sales\"].mean())\n",
-      "<ipython-input-13-aaced9650596>:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  X_test['Store_enc'] = X_test.loc[:,'Store'].map(storeid_dict).fillna(X_train[\"Sales\"].mean())\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "# Get mean of target variable for Assortment - mean encoding\n",
-    "storeid_dict = X_train.groupby(\"Store\").mean().loc[:, \"Sales\"].to_dict()\n",
-    "X_train['Store_enc'] = X_train.loc[:,'Store'].map(storeid_dict).fillna(X_train[\"Sales\"].mean())\n",
-    "X_test['Store_enc'] = X_test.loc[:,'Store'].map(storeid_dict).fillna(X_train[\"Sales\"].mean()) "
+    "assortment_dict = X_train.groupby([\"Assortment\"]).mean().loc[:, \"Sales\"].to_dict()\n",
+    "X_train.loc[:, 'Assortment_enc'] = X_train.loc[:,'Assortment'].map(assortment_dict).fillna(X_train.loc[:,\"Sales\"].mean())\n",
+    "X_test.loc[:, 'Assortment_enc'] = X_test.loc[:,'Assortment'].map(assortment_dict).fillna(X_train.loc[:,\"Sales\"].mean()) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get mean of target variable for Assortment - mean encoding\n",
+    "storeid_dict = X_train.groupby([\"Store\"]).mean().loc[:, \"Sales\"].to_dict()\n",
+    "X_train.loc[:,'Store_enc'] = X_train.loc[:,'Store'].map(storeid_dict).fillna(X_train.loc[:,\"Sales\"].mean())\n",
+    "X_test.loc[:,'Store_enc'] = X_test.loc[:,'Store'].map(storeid_dict).fillna(X_train.loc[:,\"Sales\"].mean()) "
    ]
   },
   {
